--- a/partials/AddCourseLecturer.html
+++ b/partials/AddCourseLecturer.html
@@ -8,11 +8,23 @@
 <hr>
 
 <div class="row">
-<img id="imgI" class="img-responsive " src="images/i.png" alt="">
-<h4 id="contS">Sender contact:</h4>
 
+
+<h4 id="contS">Sender contact:</h4>
+<img id="imgI" class="img-responsive " src="images/i.png" alt="">
+<span id="tooltiptext">First you need fill up all your details and all course details, if the course is already exist so you just need to choose your selection course and press send, Your information will send to us and we confirm your request after we will verify your details.</span>
+
+
+
+
+
+
+
+</div>
+<div class="row">
 <span id="Fname1">Full name: <input id="inputFname" type="type" name="FullName" class="inputBackG"></span>
 </div>
+
 <br>
 <div class="row">
 <span id="Fname2">Phone Number: <input style="width: 50px" type="type" name="" class="inputBackG"> - <input style="width: 140px" type="type" name="" class="inputBackG"></span>
@@ -30,11 +42,11 @@
 <h4 id="contS">Add Course/Lectuerer:</h4>
 </div>
 <br>
-<span id="Fname4">Choose Academy:</span><span id="dropdownAcademy3"><select class="selectpicker" data-live-search="true" data-style="btn-info" id="dropdownAcademy">
+<span id="Fname4">Choose Academy:</span><span id="dropdownAcademy3"><select class="selectpicker" data-live-search="true" data-style="btn-info" id="dropdownAcademy1">
                                     <option>Select Academy</option>
                                 </select> </span>
 <br><br>
-<span id="Fname5">Choose Faculty:</span><span id="dropdownFaculty3"><select class="selectpicker" data-live-search="true" data-style="btn-info" id= "dropdownFaculty">
+<span id="Fname5">Choose Faculty:</span><span id="dropdownFaculty3"><select class="selectpicker" data-live-search="true" data-style="btn-info" id= "dropdownFaculty3">
                                     <option>Select Faculty</option>
                                 </select>
 
