--- a/partials/ViewLecturerRaiting.html
+++ b/partials/ViewLecturerRaiting.html
@@ -13,16 +13,30 @@
 
 <hr>
 
-                    <p class="detailsRAcademy">Academy: </p>
-                    <p class="detailsRAcademy">Faculty: </p>
-                    <p class="detailsRAcademy">Lectuerer: </p>
-                    <p class="detailsRAcademy">Course: </p>
-                    <p class="detailsRAcademy">Reviewers number: </p>
-                    <p class="detailsRAcademy">Course level (Avg): </p>
-                    <p class="detailsRAcademy">Lecturer atitude(Avg): </p>
-                    <p class="detailsRAcademy">Motivation to teach (Avg): </p>
- 				    <p class="detailsRAcademy">Faculty secretary (Avg): </p>
-                    <p class="detailsRAcademy">Lecturer Intersting (Avg): </p>
+                    <div class="detailsAcademy" >
+                      <span class="detailsAcademy" id="detailsAcademyId" >Academy: </span> <span id="detailsAcademyId4" style="color:black"></span>
+                        <br>
+                      <span class="detailsAcademy" id="detailsFacultyId">Faculty: </span><span id="detailsFacultyId4" style="color:black"></span>
+                      <br>
+                        <span class="detailsAcademy" id="detailsAcademyId" >Lectuerer: </span> <span id="detailsdiffId3" style="color:black"></span>
+                        <br>
+                      <span class="detailsAcademy" id="detailsFacultyId">Course: </span><span id="detailscharacterId3" style="color:black"></span>
+                      <br>
+                      <span class="detailsAcademy" id="detailsFacultyId">Semester: </span><span id="detailscharacterId3" style="color:black"></span>
+                      <br>
+                        <span class="detailsAcademy" id="detailsAcademyId" >Reviewers number: </span> <span id="detailsSocialId3" style="color:black"></span>
+                        <br>
+                      <span class="detailsAcademy" id="detailsFacultyId">Course level (Avg): </span><span id="detailssecretaryId3" style="color:black"></span>
+                      <br>
+                        <span class="detailsAcademy" id="detailsAcademyId" >Lecturer atitude(Avg): </span> <span id="detailsunionId3" style="color:black"></span>
+                        <br>
+                      <span class="detailsAcademy" id="detailsFacultyId">Motivation to teach (Avg): </span><span id="detailssecretaryId3" style="color:black"></span>
+                      <br>
+                      <span class="detailsAcademy" id="detailsFacultyId">Lecturer Intersting (Avg): </span><span id="detailssecretaryId3" style="color:black"></span>
+                      <br>
+                      <div ></div>
+                    </div>
+                    <hr>
 
 <hr>
 
@@ -55,5 +69,10 @@
     </tr>
 
   </tbody>
+  
 </table>
-</div></div></div></div></div></div>
+</div>
+</div>
+</div>
+</div></div>
+</div>
