--- a/partials/AboutUs.html
+++ b/partials/AboutUs.html
@@ -1,65 +1,43 @@
     <div class="container">
-
+    <div class="row " >
+<div class="col-md-9" >
+ <div class="thumbnail" style="border-radius: 25px" >
         <!-- Introduction Row -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">About Us
+
+                <h1 >About Us
                     <small>It's Nice to Meet You!</small>
                 </h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
+                <p>We are two student to programing engeenir, in last semester to our graduate, today we are working at Intel corporation and more one month we start Elbit Systems, after 4 year in Brude College we decide to develop this web site to help student in chosen courses during them studies, Students can check review and detalis about specific courses and to choose what to learn next semester. </p>
             </div>
         </div>
 
         <!-- Team Members Row -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Our Team</h2>
+                <h2 >Our Team</h2>
+            </div>
+    
+            <div class="col-lg-4 col-sm-6 text-center">
+            <div class="rotateimg180">
+                <img class="img-circle img-responsive img-center " src="images/liran.jpg" alt="" style="height: 250px"></div>
+                <h3>Liran Schwartz
+                   
+                </h3>
+                 <small>Softwere Developer</small>
+              
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
-                </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+                <img class="img-circle img-responsive img-center" src="images/jacob.png" alt="" style="height: 250px">
+                <h3>Jacob Elzam   </h3>
+                <small>Softwere Developer</small>
+           
             </div>
-            <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
-                </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
-                </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
-                </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
-                </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
-                </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
-            </div>
+
         </div>
 
-        <hr>
+        </div></div></div>
 
 
     </div>
