--- a/partials/RankAcademy.html
+++ b/partials/RankAcademy.html
@@ -9,10 +9,10 @@
                   <img id="imagerank" class="img-responsive " src="images/rating.jpg" alt="">
                     <div class="caption-full">
 
-                    <div class="detailsAcademy" data-ng-controller="mainControler">
-                    	<span class="detailsAcademy" id="detailsAcademyId" >Academy: </span> <span id="detailsAcademyId1" style="color:black"></span>
+                    <div class="RankDet" data-ng-controller="mainControler">
+                    	<span class="detailsLecturerView" id="detailsAcademyId" >Academy: </span> <span class="detailsLecturerViewCol" id="detailsAcademyId1" style="color:black"></span>
                     		<br>
-                    	<span class="detailsAcademy" id="detailsFacultyId">Faculty: </span><span id="detailsFacultyId1" style="color:black"></span>
+                    	<span class="detailsLecturerView" id="detailsFacultyId">Faculty: </span><span class="detailsLecturerViewCol" id="detailsFacultyId1" style="color:black"></span>
                     	<div ng-init="initDetailsAcademy()"></div>
                     </div>
 						<hr>
