--- a/partials/RankingLecturer.html
+++ b/partials/RankingLecturer.html
@@ -10,16 +10,16 @@
                     <div class="caption-full">
 
 
-                    <div class="detailsAcademy" data-ng-controller="mainControler">
-                    	<span class="detailsAcademy"  >Academy:</span> <span id="detailsAcademyId2" style="color:black"></span>
+                    <div class="RankLec" data-ng-controller="mainControler">
+                    	<span class="detailsLecturerView"  >Academy:</span> <span class="detailsLecturerViewCol" id="detailsAcademyId2" style="color:black"></span>
                     		<br>
-                    	<span class="detailsAcademy" >Faculty:</span><span id="detailsFacultyId2" style="color:black"></span>
+                    	<span class="detailsLecturerView" >Faculty:</span><span class="detailsLecturerViewCol" id="detailsFacultyId2" style="color:black"></span>
                     		<br>
-                    	 <span class="detailsAcademy" >Semster:</span><span id="detailsSemesterId2" style="color:black"></span>
+                    	 <span class="detailsLecturerView" >Semster:</span><span class="detailsLecturerViewCol" id="detailsSemesterId2" style="color:black"></span>
                     	 	<br>
-                    	 <span class="detailsAcademy" >Lecturer:</span><span id="detailsLecturerId2" style="color:black"></span>
+                    	 <span class="detailsLecturerView" >Lecturer:</span><span class="detailsLecturerViewCol" id="detailsLecturerId2" style="color:black"></span>
                     	 	<br>
-                    	 <span class="detailsAcademy" >Course:</span><span id="detailsCourseId2" style="color:black"></span>
+                    	 <span class="detailsLecturerView" >Course:</span><span class="detailsLecturerViewCol" id="detailsCourseId2" style="color:black"></span>
                     	 	<br>
                     	 	<br>
                     	 <div ng-init="initDetailsLecturer()"></div>
