--- a/partials/ViewAcademyRaiting.html
+++ b/partials/ViewAcademyRaiting.html
@@ -24,20 +24,20 @@
 
 <hr>
 
-                    <div class="detailsAcademy" >
-                      <span class="detailsAcademy" id="detailsAcademyId" >Academy: </span> <span id="detailsAcademyId3" style="color:black"></span>
+                    <div class="ViewAcademy" >
+                      <span class="detailsLecturerView" id="detailsAcademyId" >Academy: </span> <span class="detailsLecturerViewCol" id="detailsAcademyId3" style="color:black"></span>
                         <br>
-                      <span class="detailsAcademy" id="detailsFacultyId">Faculty: </span><span id="detailsFacultyId3" style="color:black"></span>
+                      <span class="detailsLecturerView" id="detailsFacultyId">Faculty: </span><span class="detailsLecturerViewCol" id="detailsFacultyId3" style="color:black"></span>
                       <br>
-                        <span class="detailsAcademy" id="detailsAcademyId" >Academy difficulty (Avg): </span> <span id="detailsdiffId3" style="color:black"></span>
+                        <span class="detailsLecturerView" id="detailsAcademyId" >Academy difficulty (Avg): </span> <span class="detailsLecturerViewCol" id="detailsdiffId3" style="color:black"></span>
                         <br>
-                      <span class="detailsAcademy" id="detailsFacultyId">Student character (Avg): </span><span id="detailscharacterId3" style="color:black"></span>
+                      <span class="detailsLecturerView" id="detailsFacultyId">Student character (Avg): </span><span class="detailsLecturerViewCol" id="detailscharacterId3" style="color:black"></span>
                       <br>
-                        <span class="detailsAcademy" id="detailsAcademyId" >Social life (Avg): </span> <span id="detailsSocialId3" style="color:black"></span>
+                        <span class="detailsLecturerView" id="detailsAcademyId" >Social life (Avg): </span> <span class="detailsLecturerViewCol" id="detailsSocialId3" style="color:black"></span>
                         <br>
-                      <span class="detailsAcademy" id="detailsFacultyId">Faculty secretary (Avg): </span><span id="detailssecretaryId3" style="color:black"></span>
+                      <span class="detailsLecturerView" id="detailsFacultyId">Faculty secretary (Avg): </span><span class="detailsLecturerViewCol" id="detailssecretaryId3" style="color:black"></span>
                       <br>
-                        <span class="detailsAcademy" id="detailsAcademyId" >Studert's union (Avg): </span> <span id="detailsunionId3" style="color:black"></span>
+                        <span class="detailsLecturerView" id="detailsAcademyId" >Studert's union (Avg): </span> <span class="detailsLecturerViewCol" id="detailsunionId3" style="color:black"></span>
                         <br>
                       <div ></div>
                     </div>
