--- a/css/AcademyCss.css
+++ b/css/AcademyCss.css
@@ -5,6 +5,17 @@ table {
     min-width: 350px;
 }
 
+.detailsLecturerView {
+	color : rgb(32, 125, 255);
+	text-decoration: underline;
+	font-weight: bold;
+	font-size: 120%;
+}
+
+.detailsLecturerViewCol {
+	font-weight: bold;
+}
+
 #tableA{
 	 border-width: 2px;
 	 border-color: rgb(32, 125, 255);
