--- a/partials/ViewLecturerRaiting.html
+++ b/partials/ViewLecturerRaiting.html
@@ -1,5 +1,5 @@
  <link href="css/AcademyCss.css" rel="stylesheet">
-<div class="container">
+<div class="container" data-ng-controller="mainControler">
 <div class="row ">
 <div class="col-md-9">
  <div class="thumbnail" id="FrameViewAcadmy">
@@ -13,26 +13,29 @@
 
 <hr>
 
-                    <div class="detailsAcademy" >
-                      <span class="detailsAcademy" id="detailsAcademyId" >Academy: </span> <span id="detailsAcademyId4" style="color:black"></span>
+<div id="progressTimer"></div>
+<hr>
+
+                    <div class="LecturerView" >
+                      <span class="detailsLecturerView"  >Academy: </span> <span class="detailsLecturerViewCol" id="detailsAcademyId4" style="color:black"></span>
                         <br>
-                      <span class="detailsAcademy" id="detailsFacultyId">Faculty: </span><span id="detailsFacultyId4" style="color:black"></span>
+                      <span class="detailsLecturerView" >Faculty: </span><span class="detailsLecturerViewCol" id="detailsFacultyId4" style="color:black"></span>
                       <br>
-                        <span class="detailsAcademy" id="detailsAcademyId" >Lectuerer: </span> <span id="detailsdiffId3" style="color:black"></span>
+                        <span class="detailsLecturerView"  >Lectuerer: </span> <span class="detailsLecturerViewCol" id="detailsLec4" style="color:black"></span>
                         <br>
-                      <span class="detailsAcademy" id="detailsFacultyId">Course: </span><span id="detailscharacterId3" style="color:black"></span>
+                      <span class="detailsLecturerView" >Course: </span><span class="detailsLecturerViewCol" id="detailsCourse4" style="color:black"></span>
                       <br>
-                      <span class="detailsAcademy" id="detailsFacultyId">Semester: </span><span id="detailscharacterId3" style="color:black"></span>
+                      <span class="detailsLecturerView" >Semester: </span><span class="detailsLecturerViewCol" id="detailsSemester4" style="color:black"></span>
                       <br>
-                        <span class="detailsAcademy" id="detailsAcademyId" >Reviewers number: </span> <span id="detailsSocialId3" style="color:black"></span>
+                        <span class="detailsLecturerView"  >Reviewers number: </span> <span class="detailsLecturerViewCol" id="detailsRevNum4" style="color:black"></span>
                         <br>
-                      <span class="detailsAcademy" id="detailsFacultyId">Course level (Avg): </span><span id="detailssecretaryId3" style="color:black"></span>
+                      <span class="detailsLecturerView" >Course level (Avg): </span><span class="detailsLecturerViewCol" id="detailsCourseLevel4" style="color:black"></span>
                       <br>
-                        <span class="detailsAcademy" id="detailsAcademyId" >Lecturer atitude(Avg): </span> <span id="detailsunionId3" style="color:black"></span>
+                        <span class="detailsLecturerView"  >Lecturer atitude(Avg): </span> <span  class="detailsLecturerViewCol"  id="detailLecAttit4" style="color:black"></span>
                         <br>
-                      <span class="detailsAcademy" id="detailsFacultyId">Motivation to teach (Avg): </span><span id="detailssecretaryId3" style="color:black"></span>
+                      <span class="detailsLecturerView" >Motivation to teach (Avg): </span><span class="detailsLecturerViewCol" id="detailsMorivation4" style="color:black"></span>
                       <br>
-                      <span class="detailsAcademy" id="detailsFacultyId">Lecturer Intersting (Avg): </span><span id="detailssecretaryId3" style="color:black"></span>
+                      <span class="detailsLecturerView" >Lecturer Intersting (Avg): </span><span class="detailsLecturerViewCol" id="detailsLecIntr4" style="color:black"></span>
                       <br>
                       <div ></div>
                     </div>
@@ -43,7 +46,7 @@
 
 
 <div>
-	<table class="table table-bordered" id="tableA">
+	<table class="table table-bordered" id="tableB">
   <thead  style="color: rgb(32, 125, 255);">
     <tr>
       <th>#</th>
@@ -57,15 +60,8 @@
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-      <td>@mdo</td>
-      <td>@mdo</td>
-      <td>@mdo</td>
-      <td>hi how are u ok so i am very happy</td>
+    <tr style="color: black;">
+
     </tr>
 
   </tbody>
@@ -75,4 +71,5 @@
 </div>
 </div>
 </div></div>
+<div ng-init="initDetailsAvgTableLecturer()"></div>
 </div>
