--- a/partials/CourseDetail.html
+++ b/partials/CourseDetail.html
@@ -1,53 +1,46 @@
-<div class="container">
+
+<div class="container" >
     <div class="row">
         <div class="col-xs-12 col-md-3">
-            <div class="panel panel-primary">
-                <div class="panel-heading">
+            <div class="panel panel-primary" style="width: 500px">
+                <div class="panel-heading"  style="text-align: center;">
                     <h3 class="panel-title">
-                        Bronze</h3>
+                        Hedva</h3>
                 </div>
-                <div class="panel-body">
+                <div class="panel-body" style="text-align: center">
                     <div class="the-price">
-                        <h1>
-                            $10<span class="subscript">/mo</span></h1>
-                        <small>1 month FREE trial</small>
+                        <h3>Mr. Alex Web</h3>
+                        <small>Ort Braude Collage</small>
                     </div>
                     <table class="table">
                         <tr>
                             <td>
-                                1 Account
+                                Code course: 421312
                             </td>
                         </tr>
                         <tr class="active">
                             <td>
-                                1 Project
+                                4 Credits point
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                100K API Access
+                                Time: Thursday, 15:00 - 17:50
                             </td>
                         </tr>
                         <tr class="active">
                             <td>
-                                100MB Storage
+                                Room: M-106
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                Custom Cloud Services
+                               Syllabus
                             </td>
                         </tr>
-                        <tr class="active">
-                            <td>
-                                Weekly Reports
-                            </td>
-                        </tr>
+        
                     </table>
                 </div>
-                <div class="panel-footer">
-                    <a href="http://www.jquery2dotnet.com" class="btn btn-success" role="button">Sign Up</a>
-                    1 month FREE trial</div>
             </div>
         </div>
 
