--- a/partials/mainView.html
+++ b/partials/mainView.html
@@ -29,14 +29,28 @@
 
                     <div class="row ">
                         <div class="col-md-12">
-                        <p style="font-style:italic "   >Course defficulty</p>
-                            <span  class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star-empty"></span>
+                       <p style="font-style:italic "   >Course defficulty</p>
+                       <span style="margin-left:60px"><span style="color:blue">1</span></span>
+                       <span style="margin-left:70px"><span style="color:blue">2</span></span>
+                       <span style="margin-left:65px"><span style="color:blue">3</span></span>
+                       <span style="margin-left:64px"><span style="color:blue">4</span></span>
+                       <span style="margin-left:65px"><span style="color:blue">5</span></span>
+
+                               
+                        <form >
+                          <input style="margin-left:60px" type="radio" id="ch1" name="gender1" value="1"  disabled> 
+                          <input style="margin-left:60px" type="radio" name="gender1" value="2" disabled> 
+                          <input style="margin-left:60px" type="radio" name="gender1" value="3" disabled> 
+                          <input style="margin-left:60px" type="radio" name="gender1" value="4" disabled checked> 
+                          <input style="margin-left:60px" type="radio" name="gender1" value="5" disabled> 
+                       </form>
+
+            
+          <span style="font-size: 10px"><span style="color: blue"><span style="margin-left:45px "> Very Easy</span></span></span>
+                    <span style="margin-left:250px "><span style="font-size: 10px"><span style="color: blue">Very Hard</span></span></span>
+
                         </div>
-                        <span class="col-md-12" style="font-size:9px ">   easy <span style="margin-left:47px">hard</span> </span>
+                      
                     </div>
 
                     <hr>
