--- a/partials/mainView.html
+++ b/partials/mainView.html
@@ -19,7 +19,7 @@
                 <div class="well">
 
                     <div class="text-left">
-                        <h4 class="underLine4">Instruction</h4>
+                        <h4 class="underLine4">Rank instruction</h4>
                     </div>
 
                     <p><span class="underLine4">First step:</span> <br> You need choose how meny stars you want to give this course related to the subject, for example:</p>
