--- a/partials/contact.html
+++ b/partials/contact.html
@@ -1,5 +1,5 @@
- <link href="css/contactus.css" rel="stylesheet">
-<div class="container">
+ <link href="css/contactus.css" rel="stylesheet" >
+<div class="container" data-ng-controller="mainControler">
   <div class="row">
     <br/><br/><br/>
 
@@ -14,34 +14,34 @@
                     <div class="modal-body" style="padding: 5px;">
                           <div class="row">
                                 <div class="col-lg-6 col-md-6 col-sm-6" style="padding-bottom: 10px;">
-                                    <input class="form-control" name="firstname" placeholder="Firstname" type="text" required autofocus />
+                                    <input class="form-control" id="EfirstName" name="firstname" placeholder="Firstname" type="text" required autofocus />
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-sm-6" style="padding-bottom: 10px;">
-                                    <input class="form-control" name="lastname" placeholder="Lastname" type="text" required />
+                                    <input class="form-control" id="ElastName" name="lastname" placeholder="Lastname" type="text" required />
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-lg-12 col-md-12 col-sm-12" style="padding-bottom: 10px;">
-                                    <input class="form-control" name="email" placeholder="E-mail" type="text" required />
+                                    <input class="form-control" id="Eemail" name="email" placeholder="E-mail" type="text" required />
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-lg-12 col-md-12 col-sm-12" style="padding-bottom: 10px;">
-                                    <input class="form-control" name="subject" placeholder="Subject" type="text" required />
+                                    <input class="form-control" id="Esubject" name="subject" placeholder="Subject" type="text" required />
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-lg-12 col-md-12 col-sm-12">
-                                    <textarea style="resize:vertical;" class="form-control" placeholder="Message..." rows="6" name="comment" required></textarea>
+                                    <textarea style="resize:vertical;" class="form-control" id="EMessage" placeholder="Message..." rows="6" name="comment" required></textarea>
                                 </div>
                             </div>
                         </div>  
                         <div class="panel-footer" style="margin-bottom:-14px;">
-                            <input type="submit" class="btn btn-success" value="Send"/>
+                            <input type="submit" class="btn btn-success" value="Send" data-ng-click="sendEmailToUS('')"/>
                                 <!--<span class="glyphicon glyphicon-ok"></span>-->
                             <input type="reset" class="btn btn-danger" value="Clear" />
                                 <!--<span class="glyphicon glyphicon-remove"></span>-->
-                            <button style="float: right;" type="button" class="btn btn-default btn-close" data-dismiss="modal">Close</button>
+                            <button style="float: right;" type="button" class="btn btn-default btn-close" data-dismiss="modal" >Close</button>
                         </div>
                     </div>
                 </div>
