--- a/partials/contact.html
+++ b/partials/contact.html
@@ -1,37 +1,35 @@
  <link href="css/contactus.css" rel="stylesheet" >
-<div class="container" data-ng-controller="mainControler">
-  <div class="row">
-    <br/><br/><br/>
+<div class="container" >
 
-        <div class="modal fade" id="contact" tabindex="-1" role="dialog" aria-labelledby="contactLabel" aria-hidden="true">
+ <div class="col-md-9">
+     <div class="col-md-12">
             <div class="modal-dialog">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                         <h4 class="panel-title" id="contactLabel"><span class="glyphicon glyphicon-info-sign"></span> Any questions? Feel free to contact us.</h4>
                     </div>
                     <form action="#" method="post" accept-charset="utf-8">
                     <div class="modal-body" style="padding: 5px;">
                           <div class="row">
-                                <div class="col-lg-6 col-md-6 col-sm-6" style="padding-bottom: 10px;">
+                                 <div class="col-md-12" style="padding-bottom: : 10px;">
                                     <input class="form-control" id="EfirstName" name="firstname" placeholder="Firstname" type="text" required autofocus />
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-sm-6" style="padding-bottom: 10px;">
+                                <div class="col-md-12" style="padding-bottom: : 10px;">
                                     <input class="form-control" id="ElastName" name="lastname" placeholder="Lastname" type="text" required />
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-lg-12 col-md-12 col-sm-12" style="padding-bottom: 10px;">
+                                 <div class="col-md-12" style="padding-bottom: : 10px;">
                                     <input class="form-control" id="Eemail" name="email" placeholder="E-mail" type="text" required />
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-lg-12 col-md-12 col-sm-12" style="padding-bottom: 10px;">
+                               <div class="col-md-12" style="padding-bottom: : 10px;">
                                     <input class="form-control" id="Esubject" name="subject" placeholder="Subject" type="text" required />
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-lg-12 col-md-12 col-sm-12">
+                                 <div class="col-md-12" style="padding-bottom: : 10px;">
                                     <textarea style="resize:vertical;" class="form-control" id="EMessage" placeholder="Message..." rows="6" name="comment" required></textarea>
                                 </div>
                             </div>
@@ -41,11 +39,10 @@
                                 <!--<span class="glyphicon glyphicon-ok"></span>-->
                             <input type="reset" class="btn btn-danger" value="Clear" />
                                 <!--<span class="glyphicon glyphicon-remove"></span>-->
-                            <button style="float: right;" type="button" class="btn btn-default btn-close" data-dismiss="modal" >Close</button>
                         </div>
-                    </div>
-                </div>
-            </div>
+                
+                </div>                </div>
+            </div> 
         </div>
     
         
@@ -56,6 +53,10 @@
 
 <script type="text/javascript">
   
+
+
+
+
   $(document).ready(function() {
     var panels = $('.vote-results');
     var panelsButton = $('.dropdown-results');
